add angular-masonry dependency

--- a/bower.json
+++ b/bower.json
@@ -2,6 +2,7 @@
   "name": "mystore",
   "private": "true",
   "devDependencies": {
-    "ionic": "driftyco/ionic-bower#1.0.0-beta.14"
+    "ionic": "driftyco/ionic-bower#1.0.0-beta.14",
+    "angular-masonry": "~0.11.0"
   }
 }
